--- a/sponsorstyle.css
+++ b/sponsorstyle.css
@@ -75,6 +75,8 @@ body {
     display: flex;
     flex-direction: row;
     color: white;
+    margin-top: 70px;
+
 
 }
 
@@ -153,4 +155,16 @@ button {
 
 button:hover {
     background-color: #562188;
+}
+
+.event-list .event-img {
+
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+    margin-bottom: 10px;
+
+
 }
